# mars-lander-exercise

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  run_benchmarks.sh  settings.json
.github/workflows/: benchmarks.yml  rust.yml
benches/: app_benchmark.rs  solving_time.rs
dev/bench/: data.js
examples/: settings.json  sim1.json  sim2.json  sim3.json  sim4.json
examples/solve_sim/: main.rs
examples/web_gui/: main.rs
examples/web_gui/gui/: main.html  main.js
gui/: main.html  main.js
src/: app.rs  error.rs  lib.rs  main.rs
src/init/: app.rs  json.rs  mod.rs
src/simulation/: collision.rs  lander_runner.rs  lib.rs  mod.rs  physics.rs  runner.rs  simulation.rs  solver.rs
src/simulation/init/: json.rs
tests/: basic_run.rs
