[package]
name = "mars-lander-exercise"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="simulation"
path="src/lib.rs"

[dependencies]
# common
rand = "0.8"

# GUI
json = "0.12.4"
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = {version = "0.5.1", features=["cors", "trace"]}
serde_json = "1.0.113"
serde = {version = "1.0.194", features=["derive"]}